# my-last-resort

./: .env.example  .gitignore  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vault.json  vite.config.js  vitest.config.js
.github/workflows/: release.yml
assets/: index-B6ymMLfx.css  index-B8r22sgO.js  index-BjPqS1wt.js  index-BjvNEVvS.js  index-BlFPRQcd.css  index-Bwc1wllG.js  index-C1TeQ8Uv.css  index-CO1r2oDC.css  index-COr7VNj7.js  index-Clpevz4N.js  index-D61M-H8m.js  index-D9CMEF06.css  index-DCHXNl1X.js  index-DK2uDYyG.js  index-DKYlRRrs.css  index-DUXZ9WKR.js  index-DrwM7w-m.js  index-EZ4ET_15.js  index-P3KJY1Vy.js  index-Sx79rLxl.js  vault_wasm_bg-BeN2_HfS.wasm  vault_wasm_bg-DLWOUPNE.wasm  vault_wasm_bg-DjPa5plO.wasm
cli/: package.json
cli/src/: index.ts
crates/vault-cli/: Cargo.toml
crates/vault-cli/src/: config.rs  crypto.rs  main.rs  pdf.rs  types.rs
crates/vault-cli/src/commands/: cleanup.rs  decrypt.rs  encrypt.rs  init.rs  mod.rs  reissue.rs  split.rs  update.rs
crates/vault-core/: Cargo.toml
crates/vault-wasm/: Cargo.toml
public/: vault.json
scripts/: bump.sh  deploy.sh  release.sh
src/: index.css  index.jsx  main.jsx
src/components/: CreatePage.jsx  Header.jsx  HomePage.jsx  ProgressSteps.jsx  QRScanner.jsx  RecoveryApp.jsx  RecoveryApp.track.test.jsx  RestorePage.jsx  SecretInput.jsx  SharesList.jsx
src/util/: RecoveryPlanPDF.jsx  checksum.util.js  compression.util.js  crypto-shim.js  crypto.util.js  date.util.js  pdf.util.jsx  qr-chunks.util.js  share.util.js  sss.util.js  track.js  (+2 more)
(+18 files in other folders)
