[workspace]
members = ["crates/vault-core", "crates/vault-wasm", "crates/vault-cli"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
bs58 = { version = "0.5", features = ["check"] }
zeroize = { version = "1", features = ["derive"] }
thiserror = "2"
blahaj = "0.6"
anyhow = "1"

[profile.release]
opt-level = "z"
lto = true
