[package]
name = "vault-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "vault"
path = "src/main.rs"

[dependencies]
vault-core = { path = "../vault-core" }
aes-gcm = "0.10"
clap = { version = "4", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
rand = "0.9"
hex = "0.4"
zeroize.workspace = true
colored = "3"
dialoguer = "0.11"
chrono = "0.4.34"
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
anyhow.workspace = true
thiserror.workspace = true
printpdf = "0.7"
